Depuracion y envio de tipo de pago (safetypay / tarjeta) a api de correos
