# src/app/api/api-correos/models/ce-seguro-pago.ts
@@ -4,4 +4,5 @@ export interface CeSeguroPago {
   CodigoSafetypay?: null | string;
   TextoExpiracion?: null | string;
   TiempoExpiracion?: null | string;
+  TipoPago?: null | string;
 }
