# src/app/swagger/api-correos.json
@@ -579,6 +579,10 @@
       "CE_Seguro_Pago": {
         "type": "object",
         "properties": {
+          "TipoPago": {
+            "type": "string",
+            "nullable": true
+          },
           "CodigoSafetypay": {
             "type": "string",
             "nullable": true
